--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@
     } 
     подключение шрифта локально из файла, тест copy с сайта WebFonts.pro*/
 
+/* Новый коммент */
+
 html {
     font-family: 'Roboto', sans-serif;
 }
